# GitSemver.cmake

./: GitSemver.cmake  README.md
.github/workflows/: prerelease.yaml  release.yaml
examples/get_version/: CMakeLists.txt
examples/get_version/src/: configure.hpp.in  main.cpp
tools/: release.sh
